# vehicle-dynamics-project

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml  requirements.txt
data/: closed_oval_track.csv  track_1.csv
docs/devlog/: 2025-08-26-gearbox.md  2025-08-26-powertrain.md
matlab/: compute_kpis.m  demo_longitudinal_1d.m  simulate_longitudinal_1d.m
notebooks/: Untitled.ipynb  aero_effects.ipynb  fastest_lap.ipynb  frenet_plots.ipynb  limit_lap_1.ipynb  longitudinal_1d.ipynb  racing_line.ipynb  track_and_kinematic.ipynb
scripts/: export_csv.py  export_track_from_aim.py
src/vdyn/: longitudinal_1d.py
src/vdyn/controllers/: stanley.py
src/vdyn/limits/: lat_lim.py  long_lim.py  params_kart.py
src/vdyn/models/: bicycle_dynamic.py  bicycle_kinematic.py  longitudinal_1d.py  powertrain.py
src/vdyn/telemetry/: aim.py  laps.py
src/vdyn/tracks/: build.py  track.py  track_old.py
src/vdyn/utils/: frenet.py  speed_profile.py
tests/: test_limits.py  test_longitudinal_1d.py  test_powertrain.py  test_telemetry.py
